# Training

./: .gitignore
fastapi/blog-using-boilerplate/: README.md  docker-compose.yml  pyproject.toml
fastapi/blog-using-boilerplate/src/app/: __init__.py  server.py
fastapi/blog-using-boilerplate/src/app/v1/: __init__.py
fastapi/blog-using-boilerplate/src/app/v1/blog/: __init__.py
fastapi/blog-using-boilerplate/src/app/v1/blog/controller/: __init__.py  (+1 more)
fastapi/blog-using-boilerplate/src/app/v1/user/: __init__.py
fastapi/blog-using-boilerplate/src/celery_task/: __init__.py
fastapi/blog-using-boilerplate/src/config/: __init__.py
fastapi/blog-using-boilerplate/src/core/db/: __init__.py
fastapi/blog-using-boilerplate/src/core/exceptions/: base.py
fastapi/blog-using-boilerplate/src/core/fastapi/middlewares/: __init__.py  authentication.py
fastapi/blog-using-boilerplate/src/core/fastapi_1/dependencies/: permission.py
fastapi/blog-using-boilerplate/src/core/helpers/: redis.py
fastapi/blog-using-boilerplate/src/core/utils/: token_helper.py
fastapi/blog-using-boilerplate/src/migrations/: env.py
fastapi/blog-using-boilerplate/src/migrations/versions/: b810aaf8b0a1_.py  fe1e1f42ea3a_.py
supertokens/: __init__.py  apis.py  app.py  docker-compose.yaml  main.py  pyproject.toml  supertokens-FDI-1.16.0-resolved.yaml
supertokens/first-app/: package-lock.json  package.json
supertokens/first-app/frontend/: package-lock.json
supertokens/test-app/: docker-compose-test.yml  pyproject.toml
supertokens/test-app/backend/: apis.py  main.py  schemas.py  session.py
(+214 files in other folders)
